# Horizon_InfantryVision_2023

./: .gitignore  2023-04-15-best.onnx  2023-04-15-best.xml  2023-04-16-best.onnx  2023-04-16-best.xml  2023_03_08_best.mapping  2023_03_08_best.xml  CMakeLists.txt  CMakeLists.txt.user.6843158  Dockerfile  best_model.xml  main.cpp  onnx_simple.py  readme.md
DaHeng/: DaHengCamera.cpp  DaHengCamera.h  DxImageProc.h  GxIAPI.h
MidVision/include/: CameraApi.h  CameraDefine.h  MidCamera.h
include/: common.h
include/autoaim/: base_detector.h  inference.h  kf.h  ov_engine.h  predictor_pose.h
include/buff/: base_detector_energy.h  buff.h  ov_engine_energy.h  predictor.h  predictor.hpp
include/thread/: thread.h
model/: best.mapping  best.xml  best_model.mapping  best_model.xml
openvino_yolo_face/: CMakeLists.txt  base_detector.cpp  base_detector.h  main.cpp  ov_engine.cpp  ov_engine.h
openvino_yolo_face/best_FP32/: best_model.mapping
param/: camera_info.yaml  camera_info_daheng.txt
serial/: Send_Receive.cpp  Send_Receive.h
src/autoaim/: base_detector.cpp  inference.cpp  ov_engine.cpp  predictor_pose.cpp
src/buff/: base_detector_energy.cpp  buff.cpp  ov_engine_energy.cpp  predictor.cpp
src/thread/: thread.cpp
use_model/: 2023_06_03_buff.mapping  2023_06_03_buff.onnx  2023_06_03_buff.xml
